--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,23 @@ jobs:
       run: npx playwright install
     - name: Execute Playwrigth UI tests
       run: npm run start-ui
+      
+  deploy-be:
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+            service-id: ${{ secrets.SERVICE_BE_ID }}
+            api-key: ${{ secrets.RENDER_TOKEN }}
+
+  deploy-fe:
+    runs-on: ubuntu-latest
+    needs: deploy-be
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+            service-id: ${{ secrets.SERVICE_FE_ID }}
+            api-key: ${{ secrets.RENDER_TOKEN }}
